<resources>
    <string name="app_name">Contact List</string>
    <string name="show_menu">show menu</string>
    <string name="all">All</string>
    <string name="filter">filter</string>
    <string name="search">search</string>
    <string name="more_act">more act</string>
    <string name="first_letter">first letter</string>
    <string name="turn_back">turn back</string>
    <string name="edit">edit</string>
    <string name="more_info">more information</string>
    <string name="phone_number">phone number</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="avatar">avatar</string>
    <string name="hangouts">hangouts</string>
    <string name="search_action">Search...</string>
    <string name="favourite">favourite</string>
</resources>