<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_save_name"
            android:contentDescription="@string/show_menu" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="@string/all"
            android:textColor="@color/White"
            android:textSize="23dp" />

        <ImageButton
            android:id="@+id/btn_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            app:srcCompat="@drawable/ic_arrow_dropdown"
            android:contentDescription="@string/filter" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            app:srcCompat="@drawable/ic_search"
            android:contentDescription="@string/search" />

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            app:srcCompat="@drawable/ic_more_vert"
            android:contentDescription="@string/more_act" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>