<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow_white"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_avt_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background = "@color/purple_500"
        android:contentDescription="@string/avatar"
        android:maxHeight="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btn_back_detail"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:background="@null"
        android:contentDescription="@string/turn_back"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_avt_detail"
        android:layout_alignBottom="@id/img_avt_detail"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="50dp"
        android:shadowColor="@color/dark_gray"
        android:shadowRadius="1.5"
        android:text=""
        android:textColor="@color/White"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/btn_edit_detail"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_toStartOf="@+id/btn_more_detail"
        android:background="@null"
        android:contentDescription="@string/edit"
        app:srcCompat="@drawable/ic_edit" />

    <ImageButton
        android:id="@+id/btn_more_detail"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_alignEnd="@+id/img_avt_detail"
        android:background="@null"
        android:contentDescription="@string/more_info"
        app:srcCompat="@drawable/ic_more_vert" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avt_detail"
        android:background="@color/snow_white"
        android:paddingTop="50dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/stroke"
            android:layout_below="@+id/rcv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/stroke"
            android:id="@+id/rcv_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@null"
            android:layout_alignStart="@+id/rcv_phone_number"
            android:contentDescription="@string/phone_number"
            app:srcCompat="@drawable/ic_phone" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignStart="@+id/rcv_mail"
            android:layout_alignTop="@+id/rcv_mail"
            android:background="@null"
            android:contentDescription="@string/phone_number"
            app:srcCompat="@drawable/ic_mail" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_important_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/img_avt_detail"
        android:layout_alignBottom="@+id/img_avt_detail"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-40dp"
        android:background="@null"
        android:contentDescription="@string/favorite"
        app:srcCompat="@drawable/white_circle_star" />
</RelativeLayout>